<resources>
    <string name="app_name">El-Diaries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="add">add</string>
    <string name="accounts">Accounts</string>
    <string name="classes">Classes</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">BirthDay:</string>
    <string name="role">Role</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="class_name">Class Name</string>
    <string name="class_room_no">Class Room No</string>
    <string name="teacher">Teacher</string>
    <string name="next">Next</string>
    <string name="students">Students</string>
    <string name="dayofweek">Day Of Week</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="edit">Edit</string>
    <string name="logout">logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="grade">Grade</string>
    <string name="skipped_time">Skipped time</string>
    <string name="homework">HomeWork</string>
    <string name="add_homework"><u>add homework</u></string>
    <string name="send">Send</string>
    <string name="add_source">add source</string>
    <string name="url">url:</string>
    <string name="attendance">Attendance</string>
    <string name="grades">Grades</string>
    <string name="search">Search</string>
    <string name="add_new_user"><u>add new user</u></string>
    <string name="add_new_class"><u>add new classRoom</u></string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="average">Average</string>
    <string name="total">total</string>
    <string name="h">h</string>
    <string name="fillup_fields">Fill up all fields</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_account">Login account</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="add_note">Add Note</string>
    <string name="sources">Sources</string>
    <string name="calendar">Calendar</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="priority">Priority</string>
    <string name="cant_load_class_details">Cant load class details</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends at</string>
    <string name="class_type">Class type</string>
    <string name="lecture">Lecture</string>
    <string name="practice">Practice</string>
    <string name="laboratory">Laboratory</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="reset_link_was_sent_to_your_email">Reset link was sent to your email</string>
    <string name="error">error</string>
    <string name="homeworks">Homeworks</string>
    <string name="notes">Notes</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
</resources>