<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.LoginFragment"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/education"
        android:importantForAccessibility="no" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"/>

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/email"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_button_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/login"/>

</LinearLayout>