<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".presentation.teacher.students_list.student.StudentFragmentDialog">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/close_icon"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:id="@+id/buttonDismiss"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skipped_time"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerSkippedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save"/>

</LinearLayout>