<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.AuthActivity"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@drawable/app_logo"
        android:importantForAccessibility="no" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grayText"
            android:textCursorDrawable="@color/colorSecondary"
            android:textSize="16sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/lightGray">

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/grayText"
            android:textCursorDrawable="@color/colorSecondary"
            android:textSize="16sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:paddingVertical="14dp"
        android:textSize="16sp"
        android:text="@string/login"
        android:textColor="@color/white" />

</LinearLayout>